        * FIXES https://bugs.torproject.org/29686
        Rename files that contain "Bridges" to "bridgerings", to eliminate
        headache on file systems that are case insensitive.

Changes in version 0.10.0 - 2020-04-01

        * FIXES https://bugs.torproject.org/30317
        Update our "howto" box, which explains how one adds bridges to Tor
        Browser.  In addition to updating the instructions, this patch also
        links to instructions for Android.

        * FIXES https://bugs.torproject.org/33631
        So far, BridgeDB remembered only the first distribution mechanism it
        ever learned for a given bridge.  That means that if a bridge would
        change its mind and re-configure its distribution mechanism using
        BridgeDistribution, BridgeDB would ignore it.  This patch changes this
        behavior, so bridges can actually change their distribution mechanism.

        * FIXES https://bugs.torproject.org/31967
        Use a CSPRNG for selecting cached CAPTCHAs.

        * FIXES https://bugs.torproject.org/33008
        Add an info page, available at bridges.torproject.org/info.  Relay
        Search links to this info page to explain to bridge operators what their
        bridge distribution mechanism means.

Changes in version 0.9.4 - 2020-02-19

        * FIXES https://bugs.torproject.org/30946
        This patch ports BridgeDB to Python 3.  Python 2 is no longer supported
        since Jan 1, 2020.

Changes in version 0.9.3 - 2020-02-18

        * FIXES <https://bugs.torproject.org/33299>
        This patch disables the distribution of FTE, ScrambleSuit, and obfs3.

Changes in version 0.9.2 - 2020-02-04

        * FIXES <https://bugs.torproject.org/31427>
        This patch updates the AUTHORS file, HACKING.md, contact information,
        the Trac URL to report bugs, our instructions on BridgeDB's landing
        page, and it fixes a small bug in descriptor generation.

Changes in version 0.9.1 - 2019-10-29
