@@ -43,8 +43,8 @@ from __future__ import unicode_literals
 import logging
 import re
 
+from bridgedb import strings
 from bridgedb import bridgerequest
-from bridgedb.distributors.email.distributor import EmailRequestedHelp
 from bridgedb.distributors.email.distributor import EmailRequestedKey
 
 
@@ -61,7 +61,6 @@ UNBLOCKED_PATTERN = re.compile(UNBLOCKED_REGEXP)
 #: Regular expressions that we use to match for email commands.  Any command is
 #: valid as long as it wasn't quoted, i.e., the line didn't start with a '>'
 #: character.
-HELP_LINE      = re.compile("([^>].*)?h[ae]lp")
 GET_LINE       = re.compile("([^>].*)?get")
 KEY_LINE       = re.compile("([^>].*)?key")
 IPV6_LINE      = re.compile("([^>].*)?ipv6")
@@ -69,14 +68,13 @@ TRANSPORT_LINE = re.compile("([^>].*)?transport")
 UNBLOCKED_LINE = re.compile("([^>].*)?unblocked")
 
 def determineBridgeRequestOptions(lines):
-    """Figure out which :mod:`~bridgedb.filters` to apply, or offer help.
+    """Figure out which :mod:`~bridgedb.filters` to apply.
 
     .. note:: If any ``'transport TYPE'`` was requested, or bridges not
         blocked in a specific CC (``'unblocked CC'``), then the ``TYPE``
         and/or ``CC`` will *always* be stored as a *lowercase* string.
 
     :param list lines: A list of lines from an email, including the headers.
-    :raises EmailRequestedHelp: if the client requested help.
     :raises EmailRequestedKey: if the client requested our GnuPG key.
     :rtype: :class:`EmailBridgeRequest`
     :returns: A :class:`~bridgerequest.BridgeRequest` with all of the requested
@@ -92,9 +90,6 @@ def determineBridgeRequestOptions(lines):
         if not line: skippedHeaders = True
         if not skippedHeaders: continue
 
-        if HELP_LINE.match(line) is not None:
-            raise EmailRequestedHelp("Client requested help.")
-
         if GET_LINE.match(line) is not None:
             request.isValid(True)
             logging.debug("Email request was valid.")
@@ -107,6 +102,17 @@ def determineBridgeRequestOptions(lines):
             request.withPluggableTransportType(line)
         if UNBLOCKED_LINE.match(line) is not None:
             request.withoutBlockInCountry(line)
+
+    # We cannot expect all users to understand BridgeDB's commands, so we will
+    # return bridges even if the request was invalid.
+    if not request.isValid():
+        logging.debug("Email request was invalid.")
+        request.isValid(True)
+        # We will respond with our default transport protocol.
+        if not len(request.transports):
+            # Note that this variable must satisfy TRANSPORT_PATTERN.
+            default_transport = "transport %s" % strings._getDefaultTransport()
+            request.withPluggableTransportType(default_transport)
 
     logging.debug("Generating hashring filters for request.")
     request.generateFilters()
